--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "imac_cami-back",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./src/index.js",
     "fetch": "node fetchMovies.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
